# paket

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  paket-architecture.drawio
libpaket/: Cargo.toml
libpaket/example_pakets/: application_full.toml  basic.toml  insufficient.toml  library_full.toml  source_code_full.toml
libpaket/example_pakets/application_paket/: Paket.toml
libpaket/example_pakets/application_paket_with_assets/: Paket.toml
libpaket/example_pakets/application_with_extra_files_paket/: helloworld
libpaket/example_pakets/configuration_with_user_path_paket/: Paket.toml
libpaket/example_pakets/script_paket/: Paket.toml
libpaket/example_pakets/script_paket/src/: helloworld_module.py
libpaket/example_pakets/script_paket_with_assets/: Paket.toml
libpaket/src/: build.rs  dependency.rs  install.rs  lib.rs  sha256.rs  toml.rs
libpaket/src/toml_structs/: mod.rs  paket_toml.rs
libpaket/tests/: build_paket.rs  dependency.rs  paket_toml_file_parse.rs
paket-cli/: Cargo.toml
paket-cli/examples/: Insufficient_Paket.toml  application_full.toml  basic.toml  library_full.toml  source_code_full.toml
paket-cli/examples/application_paket/: Paket.toml
paket-cli/examples/basic-toml/: Paket.toml
paket-cli/examples/configuration_paket/: Paket.toml
paket-cli/examples/full-toml/: Paket.toml
paket-cli/src/: cli.rs  lib.rs  main.rs  paket_toml.rs  repo.rs
paket-cli/src/paket/: build.rs  mod.rs  sha256.rs  toml.rs
paket-cli/tests/: build_paket.rs  paket_toml_file_parse.rs  toml_file_parse.rs
paket-server/: Cargo.toml
(+3 files in other folders)
