[package]
name = "libpaket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization/Deserialization
serde = { version = "1", features = ["derive"]}
toml = "0.8"

# Compression
flate2 = "1"
tar = "0.4"

# Cryptography
sha2 = "0.10"

# Utils
once_cell = "1"
semver = "1"

[dev-dependencies]
# Testing
pretty_assertions = "1"

[lib]
name = "libpaket"
path = "src/lib.rs"