[package]
name = "paket-cli"
version = "0.1.0"
edition = "2021"
authors = ["Emin Fedar <eminfedar@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version= "4.4", features = ["cargo"]}
serde = { version = "1.0", features = ["derive"]}
toml = "0.8"
