[package]
name = "paket-cli"
version = "0.1.0"
edition = "2021"
authors = ["Emin Fedar <eminfedar@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Terminal
clap = { version= "4", features = ["cargo"]}

# Serialization/Deserialization
serde = { version = "1", features = ["derive"]}
toml = "0.8"

# Compression
flate2 = "1"
tar = "0.4"

# Testing
pretty_assertions = "1"

# Cryptography
sha2 = "0.10.8"